--- a/resume.html
+++ b/resume.html
@@ -265,7 +265,7 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-      <img src="C:\Users\JSM\OneDrive\바탕 화면\취준 파일\증명사진.jpg" alt="프로필" class="profile-photo">
+      <img src="증명사진.jpg" alt="프로필" class="profile-photo">
 
       <h2>CONTACT</h2>
       <ul>
